Fix: remove DS_Store conflict and update changes

--- a/css/shared-parts.css
+++ b/css/shared-parts.css
@@ -24,6 +24,11 @@ ul {
     list-style: none;
 }
 
+.wrapper {
+    max-width: 954px;
+    margin: 0 auto;
+}
+
 
 /* コンタクトボタン（hover) */
 .contact-btn {
@@ -90,9 +95,12 @@ ul {
 /* セクションタイトル */
 
 .section-title {
-    font-size: calc(20 / 14*1rem);
+    /* font-size: calc(20 / 14*1rem); */
+    font-size: 4rem;
     font-weight: bold;
     position: relative;
+    text-align: center;
+    margin-bottom: 80px;
 }
 
 
@@ -101,7 +109,6 @@ ul {
     height: 0.4rem;
     content: "";
     position: absolute;
-    text-align: center;
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
