--- a/css/shared-parts.css
+++ b/css/shared-parts.css
@@ -63,7 +63,7 @@ ul {
     display: block;
     width: 250px;
     height: 40px;
-    font-size: calc(14 / 14*1rem);
+    font-size: 1.4rem;
     line-height: 40px;
     text-decoration: none;
     background-color: #FFD60E;
@@ -100,7 +100,7 @@ ul {
     font-weight: bold;
     position: relative;
     text-align: center;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 
