フッターまで完成

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
 body {
-font-family: "M PLUS 1 Code", monospace;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
+font-family: "M PLUS 1 ";
 }
