--- a/css/_12footer.css
+++ b/css/_12footer.css
@@ -47,11 +47,13 @@ footer {
     column-gap: 20px;
 }
 
-.content-1,.content-2 {
+.content-1,
+.content-2 {
     padding-top: 20px;
 }
 
-.content-1 img,.content-2 img {
+.content-1 img,
+.content-2 img {
     padding-bottom: 10px;
 }
 
@@ -59,6 +61,20 @@ footer {
     text-align: center;
 }
 
-.copyright small{
+.copyright small {
     margin: 0;
+}
+
+.cta-btn {
+    width: 150px;
+    height: 150px;
+    padding: 35px 10px;
+    text-align: center;
+    border-radius: 50%;
+    background-color: #FFD60E;
+    color: white;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+    position: fixed;
+    right: 25px;
+    bottom: 25px;
 }
