--- a/css/_12footer.css
+++ b/css/_12footer.css
@@ -57,8 +57,9 @@ footer {
 
 .copyright {
     text-align: center;
+    padding-top: 30px;
 }
 
 .copyright small{
-    margin: 0;
+    margin-top: 30px;
 }
