--- a/css/_12footer.css
+++ b/css/_12footer.css
@@ -62,6 +62,21 @@ footer {
     padding-top: 30px;
 }
 
-.copyright small{
+.copyright small {
     margin-top: 30px;
+}
+
+.cta-btn {
+    width: 150px;
+    height: 150px;
+    padding: 35px 10px;
+    text-align: center;
+    background-color: #FFD60E;
+    color: white;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+
+    border-radius: 50%;
+    position: fixed;
+    right: 25px;
+    bottom: 25px;
 }
