--- a/css/_06collection.css
+++ b/css/_06collection.css
@@ -12,10 +12,12 @@ body {
 .collection-slider img {
     margin: 0 auto;
     border-radius: 15px;
+    /* box-shadow: 0 0 8px black; */
     box-shadow: 4px 4px 10px 4px rgba(0, 0, 0, 0.3);
 }
 
 .collection-slider {
+
     margin-bottom: 80px;
 }
 
@@ -67,6 +69,7 @@ body {
         left: 140%;
         opacity: 0;
     }
+
 }
 
 .wave-bottom {
@@ -80,6 +83,7 @@ body {
         /* ★修正1: max-widthを解除またはモバイルの最大幅に変更 */
         max-width: 100%; /* または max-width: 768px; */
         
+      
         /* もし .wrapper にも max-width があれば、それも同様に解除が必要な場合があります */
     }
 
@@ -90,5 +94,7 @@ body {
         background: linear-gradient(to right, #70B8EE, #497BA1);
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
     }
+
+
 
 }
