--- a/css/shared-parts.css
+++ b/css/shared-parts.css
@@ -24,10 +24,11 @@ ul {
     list-style: none;
 }
 
-.wrapper {
+/* .wrapper {
     max-width: 954px;
     margin: 0 auto;
-}
+} */
+
 
 /* コンタクトボタン（hover) */
 .contact-btn {
