--- a/css/_08free.css
+++ b/css/_08free.css
@@ -54,9 +54,9 @@ img {
 
 #btn_animation .btn {
     display: block;
-    width: 250px;
+    width: 500px;
     height: 60px;
-    font-size: 1.6rem;
+    font-size: 2.3rem;
     line-height: 60px;
     text-decoration: none;
     background-color: #FFD60E;
@@ -99,3 +99,24 @@ img {
     }
 }
 
+@media (max-width:767px) {
+
+    .step-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .step-box {
+        padding-top: 50px;
+    }
+
+    .line {
+        display: none;
+    }
+
+    .map-icon:last-child {
+        padding-bottom: 50px;
+    }
+
+}
