--- a/css/_12footer.css
+++ b/css/_12footer.css
@@ -1,7 +1,8 @@
 footer {
     background: white url(../img/footer.png);
     background-size: cover;
-    height: 430px;
+    height: 100%;
+    
 }
 
 .footer-box {
@@ -12,7 +13,7 @@ footer {
 
 
 .footer-left {
-    width: 30%;
+    max-width: 50%;
 }
 
 .footer-left ul {
@@ -62,6 +63,43 @@ footer {
     padding-top: 30px;
 }
 
-.copyright small{
-    margin-top: 30px;
+.copyright {
+    padding-block: 30px;
+}
+
+.cta-btn {
+    width: 150px;
+    height: 150px;
+    padding: 35px 10px;
+    text-align: center;
+    background-color: #FFD60E;
+    color: white;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+
+    border-radius: 50%;
+    position: fixed;
+    right: 25px;
+    bottom: 25px;
+}
+
+@media(max-width:767px) {
+
+    .footer-box {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-right {
+        position: static;
+    }
+
+    .footer-left ul {
+        padding-bottom: 40px;
+    }
+
+    .container {
+        column-gap: 60px;
+        padding-bottom: 70px;
+    }
+
 }
