mainvisual以外修正済み

--- a/css/_04strong-point.css
+++ b/css/_04strong-point.css
@@ -58,7 +58,7 @@ sp-list
 }
 
 .sp-single .text{
-    font-size: 3.0rem;
+    font-size: 2.5rem;
     font-weight: bold;
 }
 
@@ -192,6 +192,10 @@ body.modal-open {
 
 .small-content{
     box-shadow: 0 0 8px black;
+    border-radius: 20px;
+}
+
+#page1 .small-content img{
     border-radius: 20px;
 }
 
@@ -367,4 +371,26 @@ body.modal-open {
 
 .movie-btn:hover {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+}
+
+
+
+/*=================================================
+レスポンシブ
+===================================================*/
+@media(max-width:768px){
+    .sp-list{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .small-page{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .small-page-img-img{
+        display: flex;
+        flex-direction: column;
+    }
 }
