--- a/css/_10question.css
+++ b/css/_10question.css
@@ -3,7 +3,6 @@
 
 
 .question{
-    border: 1px solid;
     text-align: center;
     padding-block: 50px 120px;
     background-color: #F3F1EF;
@@ -12,7 +11,7 @@
 .q-and-a-list{
     text-align: left;
     padding: 20px 60px;
-    line-height: 40px;
+    line-height: 30px;
     background-color: white;
     border-radius: 20px;
     margin-bottom: 40px;
@@ -20,6 +19,7 @@
 
 .list-question{
     position: relative;
+    padding-bottom: 10px;
 }
 
 .list-question span{
@@ -33,7 +33,7 @@
     font-size: 1rem;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: -45px;
 }
 
@@ -41,6 +41,7 @@
     border-top: 1px solid;
     position: relative;
     display: none;
+    padding-top: 10px;
 }
 
 .list-answer span{
@@ -54,7 +55,7 @@
     font-size: 1rem;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    top: 7px;
     left: -45px;
 }
 
