--- a/css/_10question.css
+++ b/css/_10question.css
@@ -1,7 +1,3 @@
-
-
-
-
 .question{
     text-align: center;
     padding-block: 50px 120px;
@@ -59,7 +55,11 @@
     left: -45px;
 }
 
-/* アコーディオン_矢印 */
+
+
+/*=================================================
+アコーディオン_矢印
+===================================================*/
 .list-question {
     position: relative;
     cursor: pointer;
