--- a/css/_05voice.css
+++ b/css/_05voice.css
@@ -2,6 +2,7 @@
 
 .wave-top {
     width: 100%;
+    margin-bottom: 50px;
 }
 
 
@@ -13,6 +14,9 @@
     position: relative;
     background: linear-gradient(to right, #D2F0D5, #6FB375);
     padding-bottom: 120px;
+    padding-top: 80px;
+    margin-top: -50px;
+
 }
 
 .wrapper-voice,
