--- a/css/_02mainvisual.css
+++ b/css/_02mainvisual.css
@@ -132,3 +132,96 @@ mainvisualキャッチコピー
         letter-spacing: 0.03em;
     }
 }
+
+
+/*============================
+
+=============================*/
+/*============================
+ text wipe animation
+=============================*/
+
+.fancy-wipe-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    font-weight: 900;
+    font-size: 5.5rem;
+    line-height: 1.6;
+    --duration: 2.5s;
+    --easing: cubic-bezier(0.45, 0, 0.55, 1);
+    --colors: linear-gradient(
+        90deg,
+        #fff89a,
+        #cdf2ca,
+        #a2cdcd,
+        #d1e8e4,
+        #cab8ff,
+        #ff7878,
+        #ffc898
+    );
+}
+
+.fancy-wipe-container span {
+    display: block;
+    position: absolute;
+    width: 100%;
+    color: white;
+    padding: 0 2rem;
+    top: 0;
+    left: 0;
+}
+
+/* ベース文字（背景色に関係なく読める土台） */
+.text-base {
+    color: white;
+    /* opacity: 0.35; */
+    font-weight: 700;
+}
+
+/* カラーテキスト（マスクで横へ流れる） */
+.wipe-in {
+    background-image: var(--colors);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: wipe-in var(--duration) infinite var(--easing);
+    mask: linear-gradient(to right, black, black 45%, white 50%, black 52.5%, black);
+    mask-composite: exclude;
+    mask-mode: luminance;
+    mask-size: 300% 100%;
+    mask-position: 100% 0px;
+}
+
+/* ブラーで後ろに残像のような光を出す */
+.blur-in {
+    background-image: var(--colors);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    filter: blur(12px);
+    opacity: 0.7;
+    animation: wipe-in var(--duration) infinite var(--easing);
+    mask: linear-gradient(to right, black, black 45%, white 52.5%, black 55%, black);
+    mask-composite: exclude;
+    mask-mode: luminance;
+    mask-size: 300% 100%;
+    mask-position: 100% 0px;
+}
+
+/* アニメーション */
+@keyframes wipe-in {
+    100% {
+        mask-position: 0px 0px;
+    }
+}
+
+/*============================
+ スマホ対応
+=============================*/
+@media (max-width: 768px){
+    .fancy-wipe-container{
+        font-size: 3.0rem;
+    }
+}
